
	Consider control message when deciding width for a dialog, also don't let
	it disappear on narrow terminals.

	Provide conflict resolution options in a dialog rather than on the
	command-line, which is hard to read with so many options.

	Choose "middle" of the list of even length closer to the top (M key).
	Thanks to Svyatoslav Mishyn (a.k.a. juef).

	Fixed resetting "vborder" of 'fillchars' after it has been set to
	something (as in `:set fillchars=vborder:\* fillchars&`).

	Fixed crash after color scheme load failure possible in scenarios where
	file name specific highlights are used.

	Fixed use of uninitialized value which could affect whether pattern is
	matches whole path or only its name part.

	Fixed tests failures when run with root privileges.  Thanks to Ondrej
	Novy (a.k.a. onovy).

	Fixed running backgrounded commands with non-latin characters on
	Windows (that end with " &", should be OK to just drop it on Windows
	and get correct behaviour on 0.8).  Thanks to Stas Malavin.

	Fixed (in some cases) running of executables with spaces in paths on
	Windows with cmd.  Thanks to Stas Malavin.

	Fixed choosing user vs. default shell on Windows (was reversed), related
	to %S, %i and alike macros.

0.8-beta to 0.8

	Added handling of Ctrl-L to sort dialog.  Thanks to filterfalse.

	Added device id (major and minor numbers) to file info dialog.

	Added script to update timestamps, so that build system won't be
	regenerated without real reason.  One might want to run it when building
	from git checkout, which doesn't preserve correct timestamps.

	Append unused space in view columns to the last one with percent sizing
	type if any.  Thanks to fogine.

	Drastically increased performance of custom view composing.

	Be more accurate when deciding whether view displays graphics,
	particularly rely on %px and %py, because %pw and %ph might be useful for
	text viewers as well.  Thanks to Svyatoslav Mishyn (a.k.a. juef).

	Less flicker on preview window update.
